Implementing experience link upgrade