@@ -45,7 +45,7 @@ public class BrickTurret extends Turret {
 
     @Override
     protected List<ItemHandler> getContainedItems() {
-        return Collections.singletonList(ammo);
+        return List.of(ammo,upgrades);
     }
 
     @Override
